--- a/src/styles/components/card.module.css
+++ b/src/styles/components/card.module.css
@@ -1,22 +1,20 @@
 .card {
-    width: 300px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin: 10px;
-  }
-  
-  .card-content {
-    padding: 16px;
-  }
-  
-  .card-content h2 {
-    margin: 0;
-    font-size: 24px;
-  }
-  
-  .card-content p {
-    margin: 8px 0;
-  }
-  
+  width: 300px;
+  height: 300px;
+  background-color: rgb(217, 216, 215);
+  color: black;
+  border-radius: 8px;
+  box-shadow: 5px 5px 10px #22222270;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card_footer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
